--- a/src/NitterCatppuccin.user.css
+++ b/src/NitterCatppuccin.user.css
@@ -247,4 +247,8 @@
         line-height: 1.3;
         margin: 0;
     }
+    /*- Fix Poll Leader color -*/
+    .poll-meter.leader {
+        color: var(--bg_color);
+    }
 }
